--- a/nablapps/apply_committee/templates/apply_committee/apply.html
+++ b/nablapps/apply_committee/templates/apply_committee/apply.html
@@ -38,7 +38,11 @@
      background: white;
      border-bottom: 3px solid #c84040;
      padding: 4px 6px;
+     font-size: 26px;
  }
+
+ .form-row .formgroup {
+     display: inline-block;
 </style>
 <h1>Søk til nablas undergrupper</h1>
 {% if application_round %}
@@ -51,11 +55,10 @@ Nåværende søkerunde: {{ application_round.name }} <br />
     {% for form in formset %}
     <div class="form-row">
         <span class="priority_label">{{ forloop.counter }}.</span>
-        <div>
+        <div class="formgroup">
         {{ form.committee.errors }}
         {{ form.committee }}
 
-        <br />
         {{ form.application_text.errors }}
         {{ form.application_text }}
 
