--- a/nablapps/apply_committee/templates/apply_committee/apply.html
+++ b/nablapps/apply_committee/templates/apply_committee/apply.html
@@ -23,22 +23,31 @@
 </script>
 
 <style>
+ #application_form {
+     text-align: center;
+ }
+
  .priority_label {
-     font-size: 25px;
+     font-size: 30px;
+     padding-right: 20px;
  }
 
  .form-row {
-     margin-bottom: 10px;
+     margin-bottom: 30px;
      padding-bottom: 10px;
-     border-bottom: 1px solid rgba(1, 1, 1, 0.2);
  }
 
  .form-row select {
      border: 1px solid lightgray;
+     border-radius: 4px;
      background: white;
      border-bottom: 3px solid #c84040;
      padding: 4px 6px;
      font-size: 26px;
+     width: 300px;
+     margin-bottom: 16px;
+     background: #f5f5f5;
+     margin-right: 30px;
  }
 
  .form-row .formgroup {
@@ -50,7 +59,7 @@ Nåværende søkerunde: <u>{{ application_round.name }}</u> <br />
 Skriv kún i fritekst-feltet dersom komiteen har sagt at du skal gjøre dette.<br />
 Du kan se en oversikt over hvem som har søkt hva <a href="{% url 'list-applicants' %}">her</a>.
 <hr />
-<form method="post">
+<form id="application_form" method="post">
     {% csrf_token %}
     {{ formset.non_form_errors }}
     {% for form in formset %}
